# knowledge-graph-of-thoughts

./: .gitignore  LICENSE  README.md  pyproject.toml  run_multiple_gaia.sh  run_multiple_simpleqa.sh
GAIA/: gaia.py
GAIA/dataset/: .gitignore  README.md  fetch_gaia_dataset.py
GAIA/plotters/: __init__.py  answer_plot.py  cost_plot.py  leaderboard_plot.py  plot_maker.py  plot_operations.py  tool_plot.py
benchmarks/: README.md  gaia.py  simpleqa.py
benchmarks/baselines/: zero_shot.py
benchmarks/baselines/RAG/: README.md  run_rag.py
benchmarks/datasets/: .gitignore  README.md  fetch_datasets.py  requirements.txt
benchmarks/plotters/: __init__.py  answer_plot_gaia.py  answer_plot_simpleqa.py  cost_plot.py  gaia_data_analyst.py  plot_maker.py  tool_plot.py
benchmarks/scorers/: gaia_scorer.py  simple_qa_scorer.py
containers/: .env  README.md  docker-compose.yaml  sarus_launcher.sh
containers/kgot/: .env  Dockerfile  README.md  docker-compose.yaml  sarus_launcher.sh
containers/kgot/kgot_image/: Dockerfile
containers/neo4j/: .env  README.md  docker-compose.yaml  sarus_launcher.sh
containers/python/: README.md  docker-compose.yaml  sarus_launcher.sh
containers/python/files/: .gitignore  Dockerfile  README.md  python_executor.py
containers/rdf4j/: .env  README.md  docker-compose.yaml  sarus_launcher.sh
containers/rdf4j/rdf4j_image/: Dockerfile  init-repo.sh  repository-config.ttl
docker_instances/: .env  README.md  docker-compose.yaml
docker_instances/kgot_docker/: .env  Dockerfile  README.md  docker-compose.yaml
docker_instances/neo4j_docker/: .env  README.md  docker-compose.yaml
docker_instances/python_docker/: .env  README.md  docker-compose.yaml
docker_instances/python_docker/files/: requirements.txt
kgot/: .env  __main__.py  config_llms.json  config_tools.template.json
kgot/controller/: README.md  __init__.py  controller_interface.py
kgot/controller/neo4j/: llm_invocation_base.py
kgot/knowledge_graph/: README.md  __init__.py  kg_interface.py
kgot/tools/: PythonCodeTool.py  README.md  __init__.py  tool_manager_interface.py
kgot/utils/: __init__.py  llm_utils.py  log_and_statistics.py  utils.py
results/current_runs/: README.md
snapshots_visualization_tool/: .env  .gitignore  README.md  docker-compose.yaml
snapshots_visualization_tool/backend/: Dockerfile  requirements.txt
snapshots_visualization_tool/frontend/: .env  .eslintrc.json  .prettierrc  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  prod.Dockerfile  tsconfig.json
snapshots_visualization_tool/graph_examples/: data_0.json  data_1.json  data_2.json  data_3.json  data_4.json
(+85 files in other folders)
