[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kgot"
version = "1.1.0"
authors = [
  { name="Maciej Besta", email="maciej.besta@inf.ethz.ch" },
  { name="Lorenzo Paleari", email="lpaleari@student.ethz.ch" },
  { name="Andrea Jiang", email="jianga@student.ethz.ch" },
  { name="Robert Gerstenberger", email="gerstenberger.robert@gmail.com" },
  { name="You Wu", email="youwuyou@ethz.ch" },
  { name="Ales Kubicek", email="akubicek@student.ethz.ch" },
  { name="Diana Khimey", email="dkhimey@student.ethz.ch" },
  { name="Jón Gunnar Hannesson", email="jhannesson@student.ethz.ch" },
  { name="Haiqiang Zhang", email="zhaiqiang@student.ethz.ch" }
]
description = "Python package for Knowledge Graph of Thoughts"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "asyncio>=3.4.3",
  "beautifulsoup4>=4.12.3",
  "cairosvg", # svg file for ImageQuestion
  "docx2txt",
  "fastapi>=0.111.0",
  "faiss-cpu>=1.7.4",
  "flask", # Python tool
  "google-search-results>=2.4.2,<3.0.0",
  "html5lib>=1.1",
  "huggingface_hub==0.30.1",
  "kaleido==1.0.0rc13",
  "jq", # json files
  "langchain>=0.2.11",
  "langchain_community>=0.2.10",
  "langchain_core>=0.2.26",
  "langchain-google-community>=1.0.7",
  "langchain_openai>=0.1.20",
  "lxml>=5.2.2",
  "mammoth>=1.8.0,<2.0.0",
  "markdownify>=0.14.1,<0.15",
  "matplotlib>=3.8.4",
  "neo4j==5.23.1",
  "networkx", # xlsx files
  "openai>=1.37.1",
  "openpyxl", # xlsx files
  "pandas==2.2.2",
  "pathvalidate>=3.2.1,<4.0.0",
  "pillow_heif", # png files
  "pymupdf>=1.22.0",
  "pydantic>=2.8.2",
  "pypdf", # pdf files
  "python-dotenv==1.1.0",
  "python-pptx", # pptx files
  "pywikibot>=9.3.0",
  "pdfminer",
  "pdfminer.six", # pdf files
  "plotly",
  "puremagic>=1.27,<2.0",
  "rank-bm25>=0.2.2",
  "rapidocr-onnxruntime",
  "tabulate>=0.9.0",
  "tenacity>=8.3.0",
  "tqdm>=4.66.4",
  "tesseract", # png files
  "transformers>=4.44.2,<5.0.0",
  "transformers[torch]",
  "scrapegraphai==1.25.1",
  "serpapi>=0.1.5,<0.2.0",
  "unstructured", # pptx and images
  "unstructured_inference", # pptx and images
  "unstructured_pytesseract", # pptx and images
  "sparqlwrapper",
  "wikipedia>=1.4.0",
  "xlrd>=2.0.1", # xls files
  "youtube-transcript-api>=0.6.2,<0.7.0"
]

# playwright install

[project.urls]
Homepage = "https://github.com/spcl/knowledge-graph-of-thoughts"

[project.scripts]
kgot = "kgot.__main__:main"
